<resources>
    <string name="app_name">TallerDip1</string>
    <string name="calzado">CALZADO</string>
    <string name="calcular">CALCULAR</string>
    <string name="borrar">BORRAR</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="zapatilla">Zapatilla</string>
    <string name="clasico">Clasico</string>
    <string name="nike">Nike</string>
    <string name="adidas">Adidas</string>
    <string name="puma">Puma</string>
    <string name="cantidad">Cantidad</string>
    <string name="genero">Sexo:</string>
    <string name="tipo">Tipo de calzado</string>
    <string name="marca">Marca del calzado</string>
    <string name="resultado">El valor unitario es: </string>
    <string name="resultado1">El valor total a pagar es: </string>
    <string name="error">Por favor digite un numero</string>
    <string name="error1">No puede colocar 0 como valor inicial y unico</string>
    <string-array name="generos">
        <item>@string/hombre</item>
        <item>@string/mujer</item>
    </string-array>
    <string-array name="tipos">
        <item>@string/zapatilla</item>
        <item>@string/clasico</item>
    </string-array>
    <string-array name="marcas">
        <item>@string/nike</item>
        <item>@string/adidas</item>
        <item>@string/puma</item>
    </string-array>
</resources>
